[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ARCE"
version = "1.0.0"
description = "ARCE-India: Multi-Agent RL Environment for Mixed Urban Mobility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "openenv-core",
]

# ── Entry point required by openenv validate ──────────────────────────────────
# openenv validate checks for [project.scripts] pointing to a no-arg main().
# Keep backward-compatible script aliases while adding ARCE naming.
[project.scripts]
server = "ARCE.server.app:main"
arce-server = "ARCE.server.app:main"

[project.optional-dependencies]
train = [
    "trl>=0.8.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "unsloth",
    "wandb",
    "datasets",
]
dev = ["pytest", "httpx"]

# ── Package discovery ─────────────────────────────────────────────────────────
# Explicit package list avoids case-sensitivity issues with setuptools find.
[tool.setuptools]
packages = ["ARCE", "ARCE.server"]

[tool.setuptools.package-dir]
ARCE = "."
"ARCE.server" = "server"